<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <ImageButton
        android:id="@+id/FriendstoMenuBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/goes_back_to_main_menu"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backbtn" />

    <TextView
        android:id="@+id/FriendsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/FriendstoMenuBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FriendstoMenuBtn" />

    <ScrollView
        android:id="@+id/FriendsScrollView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="30dp"
        android:background="@color/very_light_grey"
        android:contentDescription="@string/scrollview_holding_a_user_s_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FriendsText">

        <LinearLayout
            android:id="@+id/FriendsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/SendFriendRequestText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/very_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddFriendView" />

    <Button
        android:id="@+id/SendFriendRequestBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/send_friend_request"
        android:textColor="@color/black"
        android:backgroundTint="@color/soft_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendFriendRequestText" />

    <Button
        android:id="@+id/PendingFriendRequestBtn"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Pending Friend Requests"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendFriendRequestBtn" />

    <Button
        android:id="@+id/SentFriendRequestBtn"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Sent Friends Requests"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendFriendRequestBtn" />

    <TextView
        android:id="@+id/AddFriendView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Add Friend"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/FriendsScrollView"
        app:layout_constraintStart_toStartOf="@+id/FriendsScrollView"
        app:layout_constraintTop_toBottomOf="@+id/FriendsScrollView" />

    <TextView
        android:id="@+id/ErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/error_orange"
        app:layout_constraintEnd_toEndOf="@+id/FriendsScrollView"
        app:layout_constraintTop_toBottomOf="@+id/FriendsScrollView" />

    <Button
        android:id="@+id/ViewFriendsBtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/soft_blue"
        android:text="View Friends"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SendFriendRequestBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>